# Automatax1

./: .gitignore  AndroidManifest.xml  README.md  gradlew  gradlew.bat  poetry.toml  pyproject.toml  settings.gradle  setup.cfg
.github/workflows/: build.yml  main.yml
app/: build.gradle
app/src/main/java/com/automatax1/: MainActivity.kt
app/src/main/java/com/example/testapp/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: accessibility_service_config.xml
app/srch/main/: AndroidManifest.xml
automatax1/: __init__.py  adb.py  clipboard.py  device.py  fastinput.py  keyboard.py  touch.py  utils.py
automatax1/core/: __init__.py  device.py  keyboard.py  selector.py  service.py  touch.py
examples/: example_script.py
gradle/wrapper/: gradle.wrapper.properties
test/: test_basic.py  test_core.py
