[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automatax1"
version = "0.1.0"
description = "Fast Android automation for Python - 50x faster than alternatives"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
keywords = ["android", "automation", "accessibility", "fast", "touch"]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/automatax1"
Repository = "https://github.com/YOUR_USERNAME/automatax1"