[metadata]
name = automatax1
version = 0.1.0
author = Your Name
author_email = your.email@example.com
description = Fast Android automation for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/YOUR_USERNAME/automatax1
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent

[options]
packages = automatax1
python_requires = >=3.7
install_requires =

[options.packages.find]
exclude = tests, examples